Fix edge case with space panel alignment with subspaces on ff

--- a/res/css/structures/_SpacePanel.scss
+++ b/res/css/structures/_SpacePanel.scss
@@ -79,6 +79,7 @@ $activeBorderColor: $secondary-fg-color;
     .mx_SpaceItem {
         display: inline-flex;
         flex-flow: wrap;
+        align-self: baseline;
     }
 
     .mx_SpaceItem.collapsed {
